--- a/src/resources/views/partials/header_guest_subscriber.hbs
+++ b/src/resources/views/partials/header_guest_subscriber.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header__top">
             <div class="row">
-                <div class="col-2">
+                <div class="col-xl-2 col-lg-4 col-sm-6 d-flex justify-content-center mt-3">
                         <div class="des-current-day">
                             <div class="weather">
                                 <img src="https://static.mediacdn.vn/images/icon_weather/nhieu-may.png
@@ -19,12 +19,12 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-1 ">
+                <div class="col-xl-1 col-lg-2 col-sm-6 d-flex justify-content-center mt-3">
                             <div class="logo">
                                 <img src="/assets/img/logo/rises.png" alt="" class="logo__img">
                             </div>
                 </div>
-                <div class="col-4">
+                <div class="col-xl-4 col-lg-6 col-sm-12">
                         <div class="search">
                         <form class="form__header">
                                 <input class="search__input" type="text" name="" id="" placeholder="Search">
@@ -32,7 +32,7 @@
                         <img src="/assets/icons/search.svg" class="search__icon"></img>
                         </div>
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-12 col-sm-12 d-flex justify-content-center mt-3">
                         <div class="social">
                             <a href="">
                                 <img src="/assets/icons/twitter.svg" alt="twitter" title="Twitter" class="social__icon social__twitter">
@@ -51,7 +51,7 @@
                             </a>
                         </div>
                 </div>
-                <div class="col-2">
+                <div class="col-xl-2 col-lg-12 col-sm-12 d-flex justify-content-center mt-3">
                         <div class="action">
                             <a href="#!" class="action__auth action__signup">Sign Up</a>
                             <a href="#!" class="action__auth action__signin">Login</a>
