--- a/src/resources/scss/layout/_authheader.scss
+++ b/src/resources/scss/layout/_authheader.scss
@@ -1,3 +1,5 @@
+@use "../abstracts";
+
 .authHeader {
   background-color: rgb(53, 53, 53);
   height: auto;
@@ -12,6 +14,11 @@
     height: 68px;
     font-family: "Rajdhani", sans-serif;
     font-weight: 700;
+    @include abstracts.screen(md) {
+      font-size: 30px;
+      line-height: 32px;
+      height: 30px;
+    }
     background:
       -webkit-linear-gradient(transparent, transparent),
       url(https://html5book.ru/wp-content/uploads/2016/08/bubbles.png) repeat;
