--- a/src/resources/scss/layout/_index.scss
+++ b/src/resources/scss/layout/_index.scss
@@ -1,3 +1,4 @@
-@forward './header';
-@forward './footer';
-@forward './authheader';
+@forward "./header";
+@forward "./footer";
+@forward "./authheader";
+@forward "./admin";
