--- a/src/resources/scss/pages/_index.scss
+++ b/src/resources/scss/pages/_index.scss
@@ -2,3 +2,8 @@
 @forward './authactive';
 @forward './errors';
 @forward './guest_index';
+@forward './dashboard_writter';
+@forward './reset_password';
+@forward './otp-verification';
+@forward './change_password';
+@forward './write_article_writter';
