--- a/src/resources/views/layouts/dashboard.hbs
+++ b/src/resources/views/layouts/dashboard.hbs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,7 +26,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Css -->
     <link rel="stylesheet" href="/assets/css/main.css" />
+    {{!-- WYSIWYG(tinymce) --}}
+   <script src="https://cdn.tiny.cloud/1/n1fsscj8lbcxxcgx78k3ocrevlqr1a0t0mnrwhe5tc7x4tzu/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <!-- Script -->
+
   </head>
   <body>
     <header>
@@ -33,5 +37,23 @@
     </header>
     {{{body}}}
     <script src="/assets/js/main.js"></script>
+    {{!-- WYSIWYG(tinymce) --}}
+    <script>
+    tinymce.init({
+    selector: '.content',
+    plugins: [
+      // Core editing features
+      'anchor', 'autolink', 'charmap', 'codesample', 'emoticons', 'image', 'link', 'lists', 'media', 'searchreplace', 'table', 'visualblocks', 'wordcount',
+      // Your account includes a free trial of TinyMCE premium features
+      // Try the most popular premium features until Dec 29, 2024:
+      'checklist', 'mediaembed', 'casechange', 'export', 'formatpainter', 'pageembed', 'a11ychecker', 'tinymcespellchecker', 'permanentpen', 'powerpaste', 'advtable', 'advcode', 'editimage', 'advtemplate', 'ai', 'mentions', 'tinycomments', 'tableofcontents', 'footnotes', 'mergetags', 'autocorrect', 'typography', 'inlinecss', 'markdown','importword', 'exportword', 'exportpdf'
+    ],
+    toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+    tinycomments_mode: 'embedded',
+    tinycomments_author: 'Author name',
+    ai_request: (request, respondWith) => respondWith.string(() => Promise.reject('See docs to implement AI Assistant')),
+  });
+</script>
   </body>
 </html>
+
