sendOTP, change Password

--- a/src/resources/views/auth/reset_password.hbs
+++ b/src/resources/views/auth/reset_password.hbs
@@ -1,16 +1,21 @@
 <div class="container reset_password">
-  <form>
+  <form
+    action="/auth/otp-verification"
+    method="POST"
+    class="auth__form auth__form-forgot"
+  >
     <div class="row w-100">
       <h1 class="rsp_title">Forgot Password</h1>
 
       <div class="enter_email">
-        <h2 for="rsp_email" class="rsp_title_label">Email/PhoneNumber</h2>
+        <label for="rsp_email" class="rsp_title_label">Email</label>
         <input
-          type="text"
-          name=""
+          type="email"
+          name="email"
           id="rsp_email"
-          placeholder="Enter Email / Phone Number"
+          placeholder="Enter Email"
           class="input_email"
+          required
         />
       </div>
       <button type="submit" class="retrieve_password">Retrieve Password</button>
