--- a/src/resources/views/auth/change_password.hbs
+++ b/src/resources/views/auth/change_password.hbs
@@ -1,5 +1,5 @@
 <div class="container change_password">
-  <form>
+  <form action="/auth/login" method="POST">
     <div class="row w-100">
       <h1 class="cp_title">Change Password</h1>
 
@@ -7,7 +7,7 @@
         <h2 for="cp" class="cp_title_label">New Password</h2>
         <input
           type="text"
-          name=""
+          name="newPassword"
           id="cp"
           placeholder="Enter New Password"
           class="input_cp"
@@ -15,7 +15,7 @@
         <h2 for="re-cp" class="cp_title_label">Re-Enter New Password</h2>
         <input
           type="text"
-          name=""
+          name="confirmPassword"
           id="re-cp"
           placeholder="Re-Enter New Password"
           class="confirm-cp"
