--- a/src/resources/views/auth/otp_verification.hbs
+++ b/src/resources/views/auth/otp_verification.hbs
@@ -1,5 +1,5 @@
 <div class="container reset_password">
-  <form>
+  <form action="/auth/change_password" method="POST">
     <div class="row w-100">
       <h1 class="rsp_title">Forgot Password</h1>
      
@@ -7,7 +7,7 @@
         <h2 for="rsp_otp" class="rsp_title_label">OTP</h2>
         <input
           type="text"
-          name=""
+          name="otp"
           id="rsp_otp"
           placeholder="Enter OTP"
           class="input_otp"
