--- a/src/resources/views/writer/writer_dashboard.hbs
+++ b/src/resources/views/writer/writer_dashboard.hbs
@@ -66,7 +66,7 @@
                 {{/if}}
               </td>
               <td>
-                <a href="/writer/edit-article" class="btn btn-edit">Fix</a>
+                <a href="/writer/edit-article/{{_id}}" class="btn btn-edit">Fix</a>
               </td>
             </tr>
           {{/each}}
