--- a/src/resources/scss/pages/_index.scss
+++ b/src/resources/scss/pages/_index.scss
@@ -7,3 +7,7 @@
 @forward './otp-verification';
 @forward './change_password';
 @forward './write_article_writter';
+@forward './admin';
+@forward './editor_dashboard';
+@forward './header_logined';
+
