--- a/src/resources/scss/pages/_reset_password.scss
+++ b/src/resources/scss/pages/_reset_password.scss
@@ -3,16 +3,18 @@
   justify-content: center;
   border: 1px solid #ccc;
   border-radius: 12px;
-  width: 500px;
-  height: auto;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  width: 80vw;
+  height: 50vh;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  vertical-align: center;
 }
 .rsp_title {
   width: 100%;
   text-align: center;
   font-weight: 800;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  margin-top: 50px;
 }
 .enter_email {
   margin-top: 30px;
@@ -26,6 +28,7 @@
     height: 50px;
     border-radius: 12px;
     padding: 5px;
+    font-size: 1.6rem;
   }
 }
 .retrieve_password {
@@ -36,6 +39,6 @@
   border-radius: 12px;
   margin-left: auto;
   margin-right: auto;
-  font-size: 1.6rem;
+  font-size: 2rem;
   margin-bottom: 10px;
 }
