--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -33,6 +33,11 @@
         {{> header_admin}}
     </header>
     {{{body}}}
-    <script src="/assets/js/main.js"></script>
+    {{!-- <script src="/assets/js/main.js"></script> --}}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+<!-- Thêm Bootstrap JS (Bootstrap 4 yêu cầu jQuery) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/admin.js"></script>
   </body>
 </html>
