--- a/src/resources/scss/pages/_change_password.scss
+++ b/src/resources/scss/pages/_change_password.scss
@@ -3,16 +3,17 @@
     justify-content: center;
     border: 1px solid #ccc;
     border-radius: 12px;
-    width: 500px;
-    height: auto;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    width: 80vw;
+    height: 50vh;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
   .cp_title {
     width: 100%;
     text-align: center;
     font-weight: 800;
     font-size: 2rem;
+    margin-top: 50px;
   }
   .enter_cp {
     margin-top: 30px;
