--- a/src/resources/scss/pages/_dashboard_writter.scss
+++ b/src/resources/scss/pages/_dashboard_writter.scss
@@ -12,7 +12,9 @@ td {
   padding: 10px;
   text-align: center;
   font-size: 1.8rem;
-  vertical-align: middle; 
+}
+td {
+  vertical-align: center; 
 }
 
 th {
