--- a/src/resources/views/auth/authActive.hbs
+++ b/src/resources/views/auth/authActive.hbs
@@ -2,7 +2,7 @@
   <div class="mainAuth">
     <div class="Authcontainer" id="Authcontainer">
       <div class="form-container sign-up">
-        <form>
+        <form action="/auth/registed" method="POST">
           <h1>Create Account</h1>
           <div class="social-icons">
             <a href="#" class="icon"><i
@@ -15,14 +15,14 @@
               ></i></a>
           </div>
           <span>or use your email for registeration</span>
-          <input type="text" placeholder="Name" />
-          <input type="email" placeholder="Email" />
-          <input type="password" placeholder="Password" />
-          <button>Sign Up</button>
+          <input type="text" placeholder="Name" name="username" />
+          <input type="email" placeholder="Email" name="email" />
+          <input type="password" placeholder="Password" name="password" />
+          <button type="submit">Sign Up</button>
         </form>
       </div>
       <div class="form-container sign-in">
-        <form>
+        <form action="/auth/login_check" method="POST">
           <h1>Sign In</h1>
           <div class="social-icons">
             <a href="#" class="icon"><i
@@ -35,10 +35,10 @@
               ></i></a>
           </div>
           <span>or use your email password</span>
-          <input type="email" placeholder="Email" />
-          <input type="password" placeholder="Password" />
+          <input type="email" placeholder="Email" name="email" />
+          <input type="password" placeholder="Password" name="password" />
           <a href="#">Forget Your Password?</a>
-          <button>Sign In</button>
+          <button type="submit">Sign In</button>
         </form>
       </div>
       <div class="toggle-container">
