--- a/src/resources/views/guest/index.hbs
+++ b/src/resources/views/guest/index.hbs
@@ -102,102 +102,34 @@
         <div class="article_title col-12 d-flex justify-content-center">
           <h1 class="article_title--name">Featured article of the week</h1>
         </div>
-        <div class="col-6 mb-4">
-          <div class="card">
-            <img
-              src="https://th.bing.com/th/id/OIP.GeISNKc1rg7SZlcK7GZ7aQHaEK?w=292&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-              class="card-img-top"
-              alt="Article Image"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Headline of the Article</h5>
-              <p class="card-text"><strong>Categories:</strong>
-                Technology, Science</p>
-              <p class="card-text"><strong>Date of Publication:</strong>
-                October 1, 2023</p>
-              <div class="d-flex align-items-center">
+        {{#each articles}}
+          <div class="col-6 mb-4">
+            <div class="card">
+              <a href="/articleDetail/{{this._id}}">
                 <img
-                  src="https://th.bing.com/th/id/OIP.GeISNKc1rg7SZlcK7GZ7aQHaEK?w=292&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-                  class="rounded-circle mr-2"
-                  alt="Profile Picture"
+                  src="{{this.image_url}}"
+                  class="card-img-top"
+                  alt="Article Image"
                 />
-                <p class="mb-0">Author Name</p>
+              </a>
+              <div class="card-body">
+                <a href="/articleDetail/{{this._id}}"><h5 class="card-title">{{this.title}}</h5></a>
+                <p class="card-text"><strong>Categories:</strong>
+                  {{this.category_id.name}}</p>
+                <p class="card-text"><strong>Date of Publication:</strong>
+                  {{this.created_at}}</p>
+                <div class="d-flex align-items-center">
+                  <img
+                    src="https://th.bing.com/th/id/OIP.GeISNKc1rg7SZlcK7GZ7aQHaEK?w=292&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                    class="rounded-circle mr-2"
+                    alt="Profile Picture"
+                  />
+                  <p class="mb-0">Author Name</p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-6 mb-4">
-          <div class="card">
-            <img
-              src="https://th.bing.com/th/id/OIF.cn8jkJYIadD1PFI0AT6Ohw?w=320&h=184&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-              class="card-img-top"
-              alt="Article Image"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Headline of the Article</h5>
-              <p class="card-text"><strong>Categories:</strong>
-                Technology, Science</p>
-              <p class="card-text"><strong>Date of Publication:</strong>
-                October 1, 2023</p>
-              <div class="d-flex align-items-center">
-                <img
-                  src="https://th.bing.com/th/id/OIF.cn8jkJYIadD1PFI0AT6Ohw?w=320&h=184&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-                  class="rounded-circle mr-2"
-                  alt="Profile Picture"
-                />
-                <p class="mb-0">Author Name</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-6 mb-4">
-          <div class="card">
-            <img
-              src="https://th.bing.com/th/id/OIP.z7x3uaiDLBKw7rdeZ_D6HgHaJh?w=144&h=185&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-              class="card-img-top"
-              alt="Article Image"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Headline of the Article</h5>
-              <p class="card-text"><strong>Categories:</strong>
-                Technology, Science</p>
-              <p class="card-text"><strong>Date of Publication:</strong>
-                October 1, 2023</p>
-              <div class="d-flex align-items-center">
-                <img
-                  src="https://th.bing.com/th/id/OIP.z7x3uaiDLBKw7rdeZ_D6HgHaJh?w=144&h=185&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-                  class="rounded-circle mr-2"
-                  alt="Profile Picture"
-                />
-                <p class="mb-0">Author Name</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-6 mb-4">
-          <div class="card">
-            <img
-              src="https://th.bing.com/th/id/OIP.uS5aUDrdp9e2WnLY9PFKbQHaEo?w=298&h=185&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-              class="card-img-top"
-              alt="Article Image"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Headline of the Article</h5>
-              <p class="card-text"><strong>Categories:</strong>
-                Technology, Science</p>
-              <p class="card-text"><strong>Date of Publication:</strong>
-                October 1, 2023</p>
-              <div class="d-flex align-items-center">
-                <img
-                  src="https://th.bing.com/th/id/OIP.uS5aUDrdp9e2WnLY9PFKbQHaEo?w=298&h=185&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-                  class="rounded-circle mr-2"
-                  alt="Profile Picture"
-                />
-                <p class="mb-0">Author Name</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        {{/each}}
       </div>
     </div>
   </div>
