--- a/src/resources/views/layouts/dashboard.hbs
+++ b/src/resources/views/layouts/dashboard.hbs
@@ -25,17 +25,20 @@
     <!--Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Css -->
-    <link rel="stylesheet" href="/assets/css/main.css" />
+   
     {{!-- WYSIWYG(tinymce) --}}
    <script src="https://cdn.tiny.cloud/1/n1fsscj8lbcxxcgx78k3ocrevlqr1a0t0mnrwhe5tc7x4tzu/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <!-- Script -->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+ <link rel="stylesheet" href="/assets/css/main.css" />
   </head>
   <body>
     <header>
         {{> header_writer_editor}}
     </header>
     {{{body}}}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
     {{!-- WYSIWYG(tinymce) --}}
     <script>
@@ -54,6 +57,7 @@
     ai_request: (request, respondWith) => respondWith.string(() => Promise.reject('See docs to implement AI Assistant')),
   });
 </script>
+
+
   </body>
 </html>
-
