--- a/src/resources/views/writer/writer_dashboard.hbs
+++ b/src/resources/views/writer/writer_dashboard.hbs
@@ -34,11 +34,7 @@
               <td>{{increment @index}}</td>
               <td>
                 {{#if image_url}}
-                  <img
-                    src="{{image_url}}"
-                    alt="Article image"
-                    class="article-img"
-                  />
+                  <img src="{{image_url}}" class="article-img" />
                 {{else}}
                   No photo
                 {{/if}}
@@ -51,7 +47,7 @@
                   {{#if category_id.name}}{{category_id.name}}{{else}}No
                     category name{{/if}}
                 {{else}}
-                  No category
+                  <h2 style="color :red">Rejected</h2>
                 {{/if}}
               </td>
               <td>
@@ -66,16 +62,71 @@
                 {{/if}}
               </td>
               <td>
-                <a href="/writer/edit-article" class="btn btn-edit">Fix</a>
+                {{#if (eq status "draft")}}
+                  <a
+                    href="/writer/{{this._id}}/edit-article"
+                    class="btn btn-edit"
+                  >Update</a>
+                {{else if (eq status "published")}}
+                  <span class="status published">Published</span>
+                {{else if (eq status "rejected")}}
+                  <a
+                    href="/writer/{{this._id}}/edit-article"
+                    class="btn btn-edit"
+                  >Update</a>
+                {{else}}
+                  No status
+                {{/if}}
               </td>
             </tr>
           {{/each}}
         {{else}}
           <tr>
-            <td colspan="7"><h1>Empty</h1></td>
+            <td colspan="8"><h1>Empty</h1></td>
           </tr>
         {{/if}}
       </tbody>
     </table>
+  </div>
+</div>
+{{!  }}
+<div
+  class="modal fade"
+  id="deleteModal"
+  hidden
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="deleteModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this article?
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-dismiss="modal"
+        >Cancel</button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          id="confirmDeleteBtn"
+        >Delete</button>
+      </div>
+    </div>
   </div>
 </div>
