--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -1827,11 +1827,14 @@ html {
 }
 
 /* DEMO-SPECIFIC STYLES */
+.typewriter {
+  text-align: center;
+}
+
 .typewriter h1 {
   color: #000;
   font-family: monospace;
   overflow: hidden; /* Ẩn nội dung khi vượt quá chiều rộng */
-  border-right: 0.15em solid orange; /* Tạo con trỏ gõ */
   white-space: nowrap; /* Đảm bảo văn bản không xuống dòng */
   margin: 0 auto; /* Căn giữa */
   letter-spacing: 0.15em; /* Khoảng cách giữa các chữ */
@@ -2150,6 +2153,7 @@ td {
 
 td {
   vertical-align: center;
+  word-wrap: break-word;
 }
 
 th {
