--- a/src/resources/scss/components/_typewritter.scss
+++ b/src/resources/scss/components/_typewritter.scss
@@ -1,9 +1,12 @@
 /* DEMO-SPECIFIC STYLES */
+.typewriter {
+    text-align: center;
+}
 .typewriter h1 {
     color: #000;
     font-family: monospace;
     overflow: hidden; /* Ẩn nội dung khi vượt quá chiều rộng */
-    border-right: .15em solid orange; /* Tạo con trỏ gõ */
+    // border-right: .15em solid orange; /* Tạo con trỏ gõ */
     white-space: nowrap; /* Đảm bảo văn bản không xuống dòng */
     margin: 0 auto; /* Căn giữa */
     letter-spacing: .15em; /* Khoảng cách giữa các chữ */
