--- a/src/resources/views/subscriber/articleDetail.hbs
+++ b/src/resources/views/subscriber/articleDetail.hbs
@@ -1,4 +1,4 @@
-{{!-- <div class="container">
+<div class="container">
   <div class="row">
     <div class="col-9">
       <div class="article-container">
@@ -55,4 +55,4 @@
       {{/each}}
     </div>
   </div>
-</div> --}}
+</div>
